samples/04-deploy-to-aks/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-website
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: contoso-website
  type: ClusterIP
