samples/04-deploy-to-aks/kubernetes/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.<CLUSTER_SPECIFIC_DNS_ZONE>
      http:
        paths:
          - backend:
              serviceName: contoso-website
              servicePort: http
            path: /
